# DSA-WAW

./: .gitignore  Calculations.java  LICENSE  README.md  hello.txt  index.html  params.json
.metadata/.plugins/org.eclipse.core.resources/: .snap
.metadata/.plugins/org.eclipse.debug.ui/: dialog_settings.xml  launchConfigurationHistory.xml
Flighty/: .classpath  .gitignore  .project
Flighty/doc/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  package-list  serialized-form.html
Game/: .classpath
Game/branch_src/: Controls.java  Difficulty.java  Menu.java
Game/doc/: constant-values.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  package-list
Game/res/: ColdFunkCreativeCommonsText.txt  Thumbs.db  plane.xcf
Game/src/: AirSpace.java  Airport.java  Airspace.java  Calculations.java  Controls.java  Difficulty.java  DifficultyState.java  EntryPoint.java  ExitPoint.java  Flight.java  FlightPlan.java  Game.java  GameOverState.java  Menu.java  MenuState.java  Pause.java  PauseState.java  Play.java  PlayState.java  Point.java  PointWiP.java  SeparationRules.java  SeparationRulesTest.java  Waypoint.java  texttest.java
Starting Compiled Game On Mac/: initAndStart.sh
Website/: about.html  contact.html  documentation.html  download.html  faq.html  index.html  manual.html  screenshots.html
Website/css/: index.css
Website/doc/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html
Website/docs/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  overview-summary.html  package-list
Website/newsite/: index.html
Website/oldsite/: documentation.html  download.html  style.css
images/: sprite_download.psd  sprite_download2.psd
resources/javadoc/: allclasses-frame.html  allclasses-noframe.html  deprecated-list.html  help-doc.html  index.html  package-list
server/: Instructions  LICENSE  Protocol.hs  SeprServer  SeprServer.cabal  SeprServer.hs  Server  seprServer.py  startServer.sh
server/src/: Protocol.hs  SeprClient.hs  SeprServer.hs
server/src/Protocol/: Client.hs  Server.hs
stylesheets/: stylesheet.css
(+476 files in other folders)
