name: SeprServer
version: 0.1.0.3
cabal-version: >=1.10
build-type: Simple
license: AllRightsReserved
license-file: LICENSE
maintainer: mjm540@york.ac.uk
homepage: http://teamwaw.co.uk/
synopsis: Team DSA taking up Team WAW's code.
author: tapuu
data-dir: ""
 
executable SeprServer
    build-depends: base >=4.6, cereal >=0.4, bytestring >=0.10,
                   stm-lifted >=0.1, mtl >=2.1, lifted-async >=0.1,
                   network-simple >=0.3
    main-is: SeprServer.hs
    buildable: True
    default-language: Haskell2010
    other-extensions: OverloadedStrings FlexibleContexts
                      NoMonomorphismRestriction DeriveDataTypeable ScopedTypeVariables
    hs-source-dirs: src
    other-modules: Protocol
 
 