name: SeprServer
version: 0.2.0.3
cabal-version: >=1.10
build-type: Simple
license: AllRightsReserved
license-file: LICENSE
maintainer: mjm540@york.ac.uk
author: tapuu
data-dir: ""
 
executable SeprServer
    build-depends: base >=4.7 && <4.8, cereal >=0.4 && <0.5,
                   bytestring >=0.10 && <0.11, network-simple >=0.3 && <0.4,
                   exceptions >=0.3 && <0.4, lifted-async >=0.1 && <0.2,
                   mtl >=2.1 && <2.2, stm-lifted >=0.1 && <0.2,
                   monad-control >=0.3 && <0.4, stm >=2.4 && <2.5, time >=1.4 && <1.5
    main-is: SeprServer.hs
    buildable: True
    default-language: Haskell2010
    other-extensions: DeriveDataTypeable FlexibleContexts
                      ScopedTypeVariables OverloadedStrings LambdaCase
    hs-source-dirs: src
    other-modules: Protocol Protocol.Server
 
executable SeprClient
    build-depends: base >=4.7 && <4.8, cereal >=0.4 && <0.5,
                   bytestring >=0.10 && <0.11, network-simple >=0.3 && <0.4,
                   exceptions >=0.3 && <0.4, lifted-async >=0.1 && <0.2,
                   mtl >=2.1 && <2.2, stm-lifted >=0.1 && <0.2,
                   monad-control >=0.3 && <0.4, stm >=2.4 && <2.5, time >=1.4 && <1.5
    main-is: SeprClient.hs
    buildable: True
    default-language: Haskell2010
    other-extensions: DeriveDataTypeable FlexibleContexts
                      ScopedTypeVariables OverloadedStrings LambdaCase
    hs-source-dirs: src
    other-modules: Protocol Protocol.Client
 
 